--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,12 @@ border:solid 1px white;
 
 
 }
+.hero_section_input_container .location_icon i{
+    align-items: start;
+    gap: 10px;
+    padding: 5px;
+   width: 10%;
+}
 .input_container_location{
 
     width: 25%;
@@ -138,7 +144,7 @@ border:solid 1px white;
 }
 .we_offer_card{
     border-radius: 10px;
-    background-color: palevioletred;
+    background-color: white;
     overflow: hidden;
     border: 1px solid #e0e0e0;
     transition: all 1s ease;
@@ -265,6 +271,7 @@ border:solid 1px white;
 .get_the_app .semicontainer .left{
     flex: 2;
 }
+
 .get_the_app .semicontainer .left img{
     width:100%;
     object-fit: cover;
@@ -304,6 +311,7 @@ border:solid 1px white;
     width: 15px;
     accent-color: rgb(239,79,95);
 }
+
 .right .input_container{
     display: flex;
     gap: 0.5rem;
@@ -326,6 +334,7 @@ border:solid 1px white;
     border-radius: 5px;
     cursor: pointer;
 }
+
 .right .download_app_container{
     display: flex;
     flex-direction: column;
@@ -341,4 +350,118 @@ border:solid 1px white;
 }
 .right .download_app_container div img{
     width: 35%;
+}
+@media only screen and (max-width:1300px){
+    .get_the_app .semicontainer .left,
+    .get_the_app .semicontainer .right{
+        flex: 1;
+    }
+    .get_the_app .semicontainer{
+        width: 80%;
+    }
+}
+@media only screen and (max-width:900px){
+    .get_the_app {
+        padding: 2rem 0;
+    }
+    }
+   
+.footer{
+    width: 100%;
+}
+
+.footer_section1{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    width: 80%;
+    margin: auto;
+} 
+.footer_section1 img{
+    width:130px ;
+}
+.section1_buttoncontainer{
+    display: flex;
+    gap: 1rem;
+} 
+.section1_buttoncontainer button{
+    padding: 5px;
+    width: 90px;
+    border: 1px solid grey;
+    border-radius: 5px;
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    cursor:pointer
+}
+.navigation_container{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    width: 80%;
+    margin: auto;
+    gap: 1rem;
+    padding: 3rem 0;
+
+} 
+.link_container{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.link_container h5{
+    font-weight: 500;
+    font-size: 15px;
+    margin-bottom: 5px;
+    letter-spacing: 0.8px;
+} 
+.footer_link{
+    text-decoration: none;
+    color: grey;
+    font-size: 12p.5px;
+    font-weight: 300;
+}
+.footer_link:hover{
+    color: black;
+} 
+.Section_links_container button{
+    background-color: black;
+    border: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 30px;
+    cursor: pointer;
+}
+.Section_links_container button i{
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.footer_section_logos{
+ width: 100%;
+}
+.disclamer{
+    width: 95%;
+    color:gray;
+    margin: auto;
+    border-top: 1px solid gray;
+    padding: 1.5rem ;
+}
+@media only screen and (max-width:900px){
+    .navigation_container{
+        grid-template-columns: repeat(3,1fr);
+    }
+}
+@media only screen and (max-width:500px){
+    .navigation_container{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+@media only screen and (max-width:320px){
+    .navigation_container{
+        grid-template-columns: repeat(1,1fr);
+    }
 }
